Fixed alignment

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -7,6 +7,7 @@ footer {
 
 #footer-container {
     width: 70vw;
+    max-width: 1400px;
     margin: auto;
     display: flex;
     flex-direction: row;
